--- a/src/App.scss
+++ b/src/App.scss
@@ -31,3 +31,13 @@ body {
     padding: 5px 10px;
     box-shadow: none;
 }
+.background_loading {
+    background-color: #F3F5FD;
+    z-index: 2;
+    height: 100vh;
+    width: 100vw;
+ }
+
+ .logo_loading {
+    color: #1124D1;
+ }
